# seoul-bike-streamlit

./: .gitignore  README.md  pyproject.toml  requirements-pip.txt  requirements.txt  run.sh
.devcontainer/: devcontainer.json
data/aggregate_daily_usage/: agg_daily_usage.parq
data/daily_usage/: README.md
data/geojson_data/: README.md
eda/: aggregate_daily_usage.ipynb  raw_daily_data_cleaning.ipynb
raw_data/: README.md
seoul_bike_streamlit/: paths.py
seoul_bike_streamlit/preprocessing/: column_ops.py  preprocessor.py
seoul_bike_streamlit/preprocessing/column_mappers/: daily_usage.yaml  monthly_usage.yaml
seoul_bike_streamlit/streamlit/: 🚴_Seoul_Bike_Usage_Trend.py
seoul_bike_streamlit/streamlit/pages/: 🇰🇷_What_is_Seoul_Bike.py
